# atomgit-rust-alg-contest

./: .gitignore  .gitmodules  Cargo.toml  README.md  info.toml
.atomgit/result/: check_result.json  summary.json
.atomgit/workflows/: rust.yml
crates/baby-mimalloc/: Cargo.toml  README.md
crates/baby-mimalloc/src/: heap.rs  lib.rs  list.rs  mmap.rs  mutex.rs  page.rs  segment.rs  utils.rs
crates/baby-mimalloc/tests/: test.rs
crates/chinese-convert/: Cargo.toml
crates/chinese-convert/data/: README.md  STFix.txt
crates/chinese-convert/src/: lib.rs
crates/date/: Cargo.toml
crates/date/src/: lib.rs  lunar.rs
crates/dsu/src/: lib.rs
crates/max-match-segmentation/: Cargo.toml
crates/max-match-segmentation/src/: lib.rs
crates/pinyin/: Cargo.toml
crates/pinyin/data/: dict.txt
crates/pinyin/src/: build-data.rs  constants.rs  lib.rs
crates/prime/: Cargo.toml
crates/prime/src/: lib.rs
crates/resident-id/: Cargo.toml
crates/resident-id/data/: README.md  (+1 more)
crates/zuc/: Cargo.toml
exercises/solution1/: README.md
exercises/solution2/: Cargo.toml  README.md
exercises/solution3/: Cargo.toml  README.md
exercises/solution4/: README.md
exercises/solution5/: README.md
src/: main.rs
topic1/solutiont1/: Cargo.toml
topic1/solutiont10/: Cargo.toml
topic1/solutiont11/: Cargo.toml  statement.md
topic1/solutiont2/: Cargo.toml
topic1/solutiont3/: Cargo.toml
topic1/solutiont4/: Cargo.toml
topic1/solutiont6/: Cargo.toml
topic1/solutiont7/: Cargo.toml
topic1/solutiont8/: Cargo.toml
topic1/solutiont9/: Cargo.toml
(+90 files in other folders)
